[package]
name = "plan9whack"
version = "0.1.0"
edition = "2021"
authors = ["Michael Stroucken <mxs@cmu.edu>"]
description = "A port of the whack compression scheme from Plan9's venti"
license = "MIT"
keywords = ["compression", "plan9", "venti"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
base64 = "0.22.0"
